Update 0.4 New note diagram.md

--- a/0.4-0.6 Diagrams/0.4 New note diagram.md
+++ b/0.4-0.6 Diagrams/0.4 New note diagram.md
@@ -3,6 +3,7 @@ sequenceDiagram
     participant browser
     participant server
 
+    Note right of browser: User types note and hits Submit
     browser->>server: POST "note" to https://fullstack-exampleapp.herokuapp.com/new_note
     activate server
     Note left of server: JavaScript on the server appends the new note & <br/>Date to the array, updating the HTML document
